--- a/src/powermate-in.html
+++ b/src/powermate-in.html
@@ -28,8 +28,8 @@
 
 <script type="text/x-red" data-help-name="powermate-in">
 	<p>This node listens to a PowerMate Bluetooth device for device events.</p>
-	<p>Select or connect to a new PowerMate device via the <i>Device</i> field. The <b>msg.payload</b> property contains the parsed event value. Additionally, <b>msg.topic</b> contains the name of the captured event.</p>
-	<p>Possible events/values are:</p>
+	<p>Select or connect to a new PowerMate device via the <i>Device</i> field by entering it's MAC address. The <b>msg.payload</b> property contains the parsed event value. Additionally, <b>msg.topic</b> contains the name of the captured event.</p>
+	<p>Possible events/value combinations are:</p>
 	<table class="node-info">
 		<tbody>
 			<tr>
