--- a/src/powermate-led.html
+++ b/src/powermate-led.html
@@ -32,7 +32,7 @@
 
 <script type="text/x-red" data-help-name="powermate-led">
     <p>This node sets the brightness of a PowerMate Bluetooth device LED.</p>
-    <p>Select or connect to a new PowerMate device via the <i>Device</i> field., then enter the percentage brightness into the <i>Brightness</i> field. If left blank the passed in <b>msg.payload</b> will be used.</p>
+    <p>Select or connect to a new PowerMate device via the <i>Device</i> field  by entering it's MAC address. Enter the percentage brightness into the <i>Brightness</i> field to set the devices LED brightness. If left blank the passed in <b>msg.payload</b> will be used.</p>
     <p>Setting a value of <b>-1</b> will pusle the LED.</p>
     <p>For further info see the <a href="https://circuitbeard.co.uk" target="_blank">Circuitbeard website</a>.</p>
 </script>
